...
                        width: 118.0,
                        height: 126.0,
                        fit: BoxFit.contain,
                      ),
                    ),
                    Text(
                      'FUELIFY',
                      style:
                          FlutterFlowTheme.of(context).headlineMedium.override(
                                fontFamily: 'Miriam Libre',
                                color: FlutterFlowTheme.of(context)
                                    .secondaryBackground,
                                fontSize: 40.0,
...
                              8.0, 0.0, 8.0, 0.0),
                          tabs: [
                            Tab(
                              text: 'Signup',
                            ),
                            Tab(
                              key: ValueKey('LoginTab_baug'),
                              text: 'Login',
                            ),
                          ],
                          controller: _model.tabBarController,
                          onTap: (i) async {
                            [() async {}, () async {}][i]();
                          },
...
                                mainAxisSize: MainAxisSize.max,
                                mainAxisAlignment: MainAxisAlignment.start,
                                children: [
                                  Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('SignupEmail_q3y0'),
                                      controller:
                                          _model.signupEmailTextController,
                                      focusNode: _model.signupEmailFocusNode,
                                      autofocus: false,
                                      obscureText: false,
                                      decoration: InputDecoration(
...
                                          .asValidator(context),
                                    ),
                                  ),
                                  Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('SignupPassword_67yh'),
                                      controller:
                                          _model.signupPasswordTextController,
                                      focusNode: _model.signupPasswordFocusNode,
                                      autofocus: false,
                                      obscureText:
                                          !_model.signupPasswordVisibility,
...
                                    ),
                                  ),
                                  Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey(
                                          'SignupConfirmPassword_a0hp'),
                                      controller: _model
                                          .signupConfirmPasswordTextController,
                                      focusNode:
                                          _model.signupConfirmPasswordFocusNode,
                                      autofocus: false,
                                      obscureText: !_model
...
                                mainAxisSize: MainAxisSize.max,
                                mainAxisAlignment: MainAxisAlignment.start,
                                children: [
                                  Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('LoginEmail_ws0q'),
                                      controller:
                                          _model.loginEmailTextController,
                                      focusNode: _model.loginEmailFocusNode,
                                      autofocus: false,
                                      obscureText: false,
                                      decoration: InputDecoration(
...
                                          .asValidator(context),
                                    ),
                                  ),
                                  Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('LoginPassword_yjz3'),
                                      controller:
                                          _model.loginPasswordTextController,
                                      focusNode: _model.loginPasswordFocusNode,
                                      autofocus: false,
                                      obscureText:
                                          !_model.loginPasswordVisibility,
...
                      ),
                    ),
                    if (_model.tabBarCurrentIndex == 0)
                      Align(
                        alignment: AlignmentDirectional(0.0, 0.0),
                        child: FFButtonWidget(
                          key: ValueKey('SignupButton_7h7e'),
                          onPressed: () async {
                            logFirebaseEvent('SIGNUP_PAGE_SignupButton_ON_TAP');
                            logFirebaseEvent('SignupButton_auth');
                            GoRouter.of(context).prepareAuthEvent();
                            if (_model.signupPasswordTextController.text !=
                                _model
...
