...
      child: Scaffold(
        key: scaffoldKey,
        backgroundColor: FlutterFlowTheme.of(context).secondaryBackground,
        body: SafeArea(
          top: true,
          child: Column(
            key: ValueKey('Column_y20q'),
            mainAxisSize: MainAxisSize.max,
            children: [
              Stack(
                children: [
                  Container(
                    width: double.infinity,
...
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              5.0, 5.0, 0.0, 0.0),
                          child: FFButtonWidget(
                            key: ValueKey('Button_qs1y'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'PROFILE05_PAGE_LOG_OUT_BTN_ON_TAP');
                              logFirebaseEvent('Button_auth');
                              GoRouter.of(context).prepareAuthEvent();
                              await authManager.signOut();
...
                  Align(
                    alignment: AlignmentDirectional(-1.0, 0.0),
                    child: Padding(
                      padding:
                          EdgeInsetsDirectional.fromSTEB(90.0, 60.0, 0.0, 0.0),
                      child: Text(
                        key: ValueKey('Text_lqoy'),
                        'Hello,',
                        style: FlutterFlowTheme.of(context).bodyMedium.override(
                              fontFamily: 'Miriam Libre',
                              color: FlutterFlowTheme.of(context)
                                  .primaryBackground,
                              fontSize: 20.0,
...
                  children: [
                    Align(
                      alignment: AlignmentDirectional(0.0, 0.0),
                      child: Container(
                        width: 200.0,
                        child: TextFormField(
                          key: ValueKey('TextField_syfm'),
                          controller: _model.textController,
                          focusNode: _model.textFieldFocusNode,
                          autofocus: false,
                          obscureText: false,
                          decoration: InputDecoration(
                            isDense: true,
...
                        borderRadius: BorderRadius.circular(12.0),
                      ),
                      child: Padding(
                        padding:
                            EdgeInsetsDirectional.fromSTEB(0.0, 50.0, 0.0, 0.0),
                        child: FFButtonWidget(
                          key: ValueKey('searchbutton_f77a'),
                          onPressed: () async {
                            logFirebaseEvent(
                                'PROFILE05_PAGE_searchbutton_ON_TAP');
                            logFirebaseEvent('searchbutton_update_page_state');
                            _model.zip = _model.textController.text;
                            safeSetState(() {});
...
