...
                        ),
                      ),
                    ].divide(SizedBox(height: 24.0)),
                  ),
                ),
                FFButtonWidget(
                  key: ValueKey('Button_16xc'),
                  onPressed: () async {
                    logFirebaseEvent('ONBOARDING_PAGE_Button_ON_TAP');
                    logFirebaseEvent('Button_backend_call');
                    unawaited(
                      () async {
                        await currentUserReference!
...
